--- a/immfly-challenge/immfly-challenge-distributed-services/pom.xml
+++ b/immfly-challenge/immfly-challenge-distributed-services/pom.xml
@@ -49,8 +49,10 @@
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
+			<version>3.6.28</version>
 			<scope>test</scope>
 		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/org.powermock/powermock-api-mockito2 -->
 		<dependency>
 			<groupId>org.powermock</groupId>
@@ -70,8 +72,10 @@
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-junit-jupiter</artifactId>
+			<version>3.6.28</version>
 			<scope>test</scope>
 		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/org.mockito/mockito-all -->
 		<dependency>
 			<groupId>org.mockito</groupId>
@@ -95,8 +99,10 @@
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-engine</artifactId>
 			<version>5.7.0</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
+
 
 	<build>
 		<plugins>
@@ -110,10 +116,38 @@
 						<artifactId>junit-jupiter-engine</artifactId>
 						<version>5.7.0</version>
 					</dependency>
+					<dependency>
+						<groupId>org.mockito</groupId>
+						<artifactId>mockito-core</artifactId>
+						<version>3.6.28</version>
+					</dependency>
+					<dependency>
+						<groupId>org.powermock</groupId>
+						<artifactId>powermock-api-mockito2</artifactId>
+						<version>2.0.9</version>
+					</dependency>
+					<dependency>
+						<groupId>org.powermock</groupId>
+						<artifactId>powermock-reflect</artifactId>
+						<version>2.0.9</version>
+					</dependency>
+					<dependency>
+						<groupId>org.mockito</groupId>
+						<artifactId>mockito-junit-jupiter</artifactId>
+						<version>3.6.28</version>
+					</dependency>
+					<dependency>
+						<groupId>org.mockito</groupId>
+						<artifactId>mockito-all</artifactId>
+						<version>1.10.19</version>
+					</dependency>
+					<dependency>
+						<groupId>org.springframework.boot</groupId>
+						<artifactId>spring-boot-starter-test</artifactId>
+					</dependency>
 				</dependencies>
 			</plugin>
 		</plugins>
 	</build>
-
 
 </project>
