--- a/flights-provider-service/src/main/resources/application.properties
+++ b/flights-provider-service/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 server.port=9090
+
+
+#AMQP RabbitMQ configuration --------------------------------------- 
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=15672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
+# Additional RabbitMQ properties
+spring.rabbitmq.listener.simple.concurrency=4
+spring.rabbitmq.listener.simple.max-concurrency=8
+
+# Queues
+queue.flights.name=FlightsQueue
