--- a/immfly-challenge/immfly-challenge-presentation/src/main/resources/application.properties
+++ b/immfly-challenge/immfly-challenge-presentation/src/main/resources/application.properties
@@ -6,6 +6,7 @@ immfly.flightsclient.apiHost=http://localhost:9090
 
 spring.main.allow-bean-definition-overriding=true
 
+# BBDD properties --------------------------------------- 
 spring.datasource.username=challenge_user
 spring.datasource.password=cH2*ZnQ%s!xx
 spring.datasource.url=jdbc:sqlserver://concatel.database.windows.net;databaseName=challenge
@@ -19,3 +20,16 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 spring.datasource.dbcp2.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+
+# AMQP RabbitMQ configuration --------------------------------------- 
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=15672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
+# Additional RabbitMQ properties
+spring.rabbitmq.listener.simple.concurrency=4
+spring.rabbitmq.listener.simple.max-concurrency=8
+
+# Queues
+queue.flights.name=FlightsQueue
