--- a/immfly-challenge/immfly-challenge-presentation/src/main/resources/application.properties
+++ b/immfly-challenge/immfly-challenge-presentation/src/main/resources/application.properties
@@ -21,15 +21,18 @@ spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 spring.datasource.dbcp2.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
-# AMQP RabbitMQ configuration --------------------------------------- 
+#AMQP RabbitMQ configuration --------------------------------------- 
 spring.rabbitmq.host=localhost
-spring.rabbitmq.port=15672
+spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
+jsa.rabbitmq.exchange=jsa.exchange.flight
+jsa.rabbitmq.queue=jsa.flights.queue
+jsa.rabbitmq.routingkey=jsa.routingkey
 
 # Additional RabbitMQ properties
 spring.rabbitmq.listener.simple.concurrency=4
 spring.rabbitmq.listener.simple.max-concurrency=8
 
 # Queues
-queue.flights.name=FlightsQueue
+# queue.flights.name=FlightsQueue
